; ModuleID = '/home/carl/AnghaBench/i3/src/extr_commands_parser.c_next_state.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_commands_parser.c_next_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32, i32 }
%struct.TYPE_9__ = type { i32, i64, i32, i32 }
%struct.TYPE_8__ = type { i64, %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }

@__CALL = common dso_local global i64 0, align 8
@command_output = common dso_local global %struct.TYPE_10__ zeroinitializer, align 4
@subcommand_output = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@state = common dso_local global i64 0, align 8
@INITIAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*)* @next_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @next_state(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %3 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @__CALL, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %22

8:                                                ; preds = %1
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @command_output, i32 0, i32 2), align 4
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @subcommand_output, i32 0, i32 3), align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @command_output, i32 0, i32 1), align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @subcommand_output, i32 0, i32 2), align 8
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @subcommand_output, i32 0, i32 0), align 8
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @GENERATED_call(i32 %14, %struct.TYPE_9__* @subcommand_output)
  %16 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @subcommand_output, i32 0, i32 1), align 8
  store i64 %16, i64* @state, align 8
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @subcommand_output, i32 0, i32 0), align 8
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @command_output, i32 0, i32 0), align 4
  br label %20

20:                                               ; preds = %19, %8
  %21 = call i32 (...) @clear_stack()
  br label %31

22:                                               ; preds = %1
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  store i64 %25, i64* @state, align 8
  %26 = load i64, i64* @state, align 8
  %27 = load i64, i64* @INITIAL, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %22
  %30 = call i32 (...) @clear_stack()
  br label %31

31:                                               ; preds = %20, %29, %22
  ret void
}

declare dso_local i32 @GENERATED_call(i32, %struct.TYPE_9__*) #1

declare dso_local i32 @clear_stack(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
